2007-12-28  Steve Frécinaux  <code@istique.net>

	* gedit/gedit-plugins-engine.[ch]: Rename a bunch of
	gedit_plugins_engine_get_plugin_* into gedit_plugin_info_get_*, which
	is shorter and closer to the general naming convention.

	* gedit/gedit-plugin-manager.c: adapt to above changes.

2007-12-22  Paolo Borelli  <pborelli@katamail.com>

	* plugins/spell/gedit-spell-plugin.c: do not use the old gnome blue
	book icon. It looks ugly and out of place anyway.

2007-12-22  Paolo Borelli  <pborelli@katamail.com>

	* plugins/time/gedit-time-plugin.c: remove usage of gnome-config
	and cleanup code a bit.

2007-12-16  Paolo Borelli  <pborelli@katamail.com>

	* plugins/gedit-file-browser-store.c: use utility function to get the
	icon, so that we do not include libgnome headers.

2007-12-15  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-commands-file.c: fix off by one in goto_line when
	raising an already open document. Fixes bug #503665.

2007-12-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit.c:
	* gedit/gedit-app.c:
	Use gtk functions to load and save accels. Based on a patch by
	MIkael Hermansson.

2007-12-09  Paolo Borelli  <pborelli@katamail.com>

	* plugins/gedit-file-browser-widget.c:
	* plugins/gedit-file-bookmarks-store.c:
	Reorder includes

	* gedit/gedit-print.c:
	Do not use gnome_utils function.

2007-12-09  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-window.c (sort_recents_mru): fix comparison, spotted
	by Christian Persch.

2007-11-10  Paolo Borelli  <pborelli@katamail.com>

	* plugins/snippets/data/python.xml: fix typo in class snippet.
	Patch by Yoan Blanc.

2007-11-07  Jesse van den Kieboom  <jesse@icecrew.nl>

	* plugins/snippets/snippets/Placeholder.py: fixed bug not showing a
	default value for python placeholder mirror placeholders

2007-11-04  Paolo Borelli  <pborelli@katamail.com>

	* gedit/gedit-document.c: be more careful when retrieving mtime.

2007-11-02  Steve Frécinaux  <code@istique.net>
